--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
 .myenv/
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.db
+*.sqlite3
+
+
+# Django
+/staticfiles/
+/media/
+
+# VSCode / PyCharm
+.vscode/
+.idea/
+
+# Environment variables
+.env
